api versioning, readme update
